# LetsGetSerial

./: .gitignore  .qmlls.ini  CMakeCogMain.py  CMakeLists.txt  Main.qml  README.md  icon.icns  lets-get-serial.desktop  main.cpp
ArduinoShellWe/ShellWe/: ShellWe.ino
Bal/: .qmlls.ini  CMakeCog.py  CMakeCogLib.py  CMakeLists.txt  GenHpp.py
Bal/hpp/: SerialMngr.hpp  SettingsConn.hpp  mytype.hpp
Bal/prptHpp/: MyTypePrivate.hpp  MyTypePrivate.py  SettingsConnPrivate.hpp  SettingsConnPrivate.py  property.py
Design/: CMakeLists.txt
Design/Core/: .qmlls.ini  CoreButton.qml  CoreSystemPalette.qml
Design/Design/: Constants.qml
Design/DesignContent/: .qmlls.ini  App.qml  CMakeLists.txt  HeaderComponent.qml  PlaygroundComponent.qml  Screen01.qml  StatusBarComponent.qml  TerminalBodyComponent.qml  TerminalSettingsComponent.qml  qmldir
Design/Playground/: CMakeLists.txt  PlaygroundComponent.qml  genQmlDirAndCMake.py  qmldir
deployScript/: lets-get-serial.sh  postinst  prerm
scripts/: Qt6AddQmlModule.py  propertyLib.py  runCog.sh
